JSW Devsb/src/objects/Order_Booking_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creation_Time__c</fullName>
        <formula>LEFT(RIGHT(text( CreatedDate),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creation Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Booking_Line_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Booking Line Item</label>
        <referenceTo>Order_Booking_Line__c</referenceTo>
        <relationshipLabel>Order request line Schedule</relationshipLabel>
        <relationshipName>Order_Booking_Schedule</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Request_Line_Name__c</fullName>
        <formula>Order_Booking_Line_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Request Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Request_Name__c</fullName>
        <formula>Order_Request__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Request Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Request</label>
        <referenceTo>Order_Request__c</referenceTo>
        <relationshipLabel>Order request line Schedule</relationshipLabel>
        <relationshipName>Order_Booking_Schedule</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Schedule_Item__c</fullName>
        <label>SO Schedule Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Qty__c</fullName>
        <label>Schedule Qty</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>So_Item_Number__c</fullName>
        <label>So Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order request line Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORS{0000000000}</displayFormat>
        <label>Order Booking Schedule  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order request line Schedule</pluralLabel>
    <recordTypes>
        <fullName>Order_Schedule_Record_Lock</fullName>
        <active>true</active>
        <label>Order Schedule Record Lock</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>